force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/Negoptim__CommercialPlanDetail__c.object-meta.xml
<CustomObject>
    <description>API Abbrv: CPD</description>
    <label>Commercial Plan Detail</label>
    <nameField>
        <label>Event Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Plan Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>