force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__Agreement__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accord de référence</description>
    <label>Agreement</label>
    <referenceTo>Negoptim__Agreement__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Agreement)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsAG</relationshipName>
    <type>Lookup</type>
</CustomField>