force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__AgreementLine1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__AgreementLine1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ligne de budget promotionnel négocié au niveau de l&apos;accord</description>
    <label>Agreement Line 1</label>
    <referenceTo>Negoptim__AgreementLine__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Agreement Line 1)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsAGL1</relationshipName>
    <type>Lookup</type>
</CustomField>