force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__AgreementNumberAG__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__AgreementNumberAG__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>