force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ApprobationDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ApprobationDate__c</fullName>
    <description>Date début vente conso pour la ligne</description>
    <label>Approbation date</label>
    <type>Date</type>
</CustomField>