force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__CodeCP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CodeCP__c</fullName>
    <formula>Negoptim__CommercialPlan__r.Negoptim__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Code</label>
    <type>Text</type>
</CustomField>