force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__CodeLongNS__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CodeLongNS__c</fullName>
    <formula>Negoptim__NegoScope__r.Negoptim__NS_Code_Long__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nego Scope Code</label>
    <type>Text</type>
</CustomField>