force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__COGS__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__COGS__c</fullName>
    <description>Prix sortie usine</description>
    <label>COGS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>