force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__CommercialPlan__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CommercialPlan__c</fullName>
    <label>Commercial Plan</label>
    <referenceTo>Negoptim__CommercialPlan__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Commercial Plan)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsCP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>