force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__CommercialPlanParent__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CommercialPlanParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Plan Parent</label>
    <referenceTo>Negoptim__CommercialPlan__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Commercial Plan Parent)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsCPParent</relationshipName>
    <type>Lookup</type>
</CustomField>