force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ConsumerTradeItemPromoDetail__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ConsumerTradeItemPromoDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Trade Item Promo Detail</label>
    <referenceTo>Negoptim__CommercialPlanDetail__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (CTI Promo Detail)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsCTIPD</relationshipName>
    <type>Lookup</type>
</CustomField>