force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContactEmailPartner__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContactEmailPartner__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>