force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContactPartner__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContactPartner__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>