force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__Contract__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Negoptim__Contract__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Contract)</relationshipLabel>
    <relationshipName>CommercialPlanDetails</relationshipName>
    <type>Lookup</type>
</CustomField>