force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContractPromoBDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContractPromoBDate__c</fullName>
    <formula>If ( ISBLANK(Negoptim__SellOutBDate__c), Negoptim__SellOutBDateCP__c , Negoptim__SellOutBDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date for Agreement</label>
    <type>Date</type>
</CustomField>