force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContractPromoEDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContractPromoEDate__c</fullName>
    <formula>If ( ISBLANK(Negoptim__SellOutEDate__c), Negoptim__SellOutEDateCP__c, Negoptim__SellOutEDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date for Agreement</label>
    <type>Date</type>
</CustomField>