force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContractPromoEditionDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContractPromoEditionDate__c</fullName>
    <description>Date début vente conso pour la ligne</description>
    <label>Edition Date</label>
    <type>Date</type>
</CustomField>