force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContractPromoNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContractPromoNumber__c</fullName>
    <label>Event Detail Contract Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>