force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContractPromoURL__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContractPromoURL__c</fullName>
    <label>Promo Contract</label>
    <type>Url</type>
</CustomField>