force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ContractPromoYear__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ContractPromoYear__c</fullName>
    <description>Année de l&apos;accord de référence</description>
    <formula>YEAR( Negoptim__ContractPromoBDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>