force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ExtId__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ExtId__c</fullName>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>