force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__HierarchyElement__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__HierarchyElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Element</label>
    <referenceTo>Negoptim__Orga_HE__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (HE)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsHE</relationshipName>
    <type>Lookup</type>
</CustomField>