force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__IntegIdLast__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IntegIdLast__c</fullName>
    <label>Last Integration id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>