force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__IntegLDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IntegLDate__c</fullName>
    <label>Last Integration Date</label>
    <type>DateTime</type>
</CustomField>