force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__InvoiceDate__c</fullName>
    <description>Date de la facture</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>