force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__InvoiceDocumentURL__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__InvoiceDocumentURL__c</fullName>
    <label>Customer invoice document</label>
    <type>Url</type>
</CustomField>