force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__IsFromAgreementLinePrenego__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsFromAgreementLinePrenego__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From pre-nego budget</label>
    <type>Checkbox</type>
</CustomField>