force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__IsIncludetoNetPriceStmt__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsIncludetoNetPriceStmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Included in NetPrice Statement</label>
    <type>Checkbox</type>
</CustomField>