force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__IsMasterHLP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsMasterHLP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMaster Higher Level Packaging</label>
    <type>Checkbox</type>
</CustomField>