force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__LineStatus__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__LineStatus__c</fullName>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>