force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ManagementFix__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ManagementFix__c</fullName>
    <description>Frais de gestion fix</description>
    <label>Management Fix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>