force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__NameCP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NameCP__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>