force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__NetPriceRegular__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NetPriceRegular__c</fullName>
    <description>PAN HT en cours pour le produit. Il est remplis automatiquement au moment de la création de la ligne (Depuis l&apos;objet PG ou PWF).</description>
    <label>Regular Purchase NetPrice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>