force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__NetPriceWoTaxPromo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NetPriceWoTaxPromo__c</fullName>
    <label>Promo Net Price without tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>