force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__Note__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>