force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__OpName__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__OpName__c</fullName>
    <label>Event</label>
    <length>250</length>
    <type>Text</type>
</CustomField>