force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__OwnerNS__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__OwnerNS__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>