force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__PowerofAttornayNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PowerofAttornayNumber__c</fullName>
    <label>Customer reference number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>