force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__PowerofAttornayURL__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PowerofAttornayURL__c</fullName>
    <label>Power of Attornay</label>
    <type>Url</type>
</CustomField>