force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__PowerofAttorneyEditionDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PowerofAttorneyEditionDate__c</fullName>
    <description>Date d&apos;édition du contrat de mandat</description>
    <label>Power of Attorney Edition Date</label>
    <type>Date</type>
</CustomField>