force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ProdCapacityRequestDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProdCapacityRequestDate__c</fullName>
    <label>Prod Capacity Request Date</label>
    <type>DateTime</type>
</CustomField>