force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ProdCapacityValidDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProdCapacityValidDate__c</fullName>
    <label>Prod Capacity Validation Date</label>
    <type>DateTime</type>
</CustomField>