force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ProductBrand__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProductBrand__c</fullName>
    <formula>Negoptim__Product__r.Negoptim__Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Brand</label>
    <type>Text</type>
</CustomField>