force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__ProductEAN__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ProductEAN__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product EAN</label>
    <type>Text</type>
</CustomField>