force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__PWFAfterPromoDisc__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PWFAfterPromoDisc__c</fullName>
    <formula>Negoptim__PWFBeforePromoDisc__c * (1-Negoptim__SellInDiscountPerNego__c/ 100) - Negoptim__SellInDiscountUAmtNego__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Lowered Price after PromoDisc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>