force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__PWFBeforePromoDisc__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PWFBeforePromoDisc__c</fullName>
    <description>Prix descendu avant application de la remise promo</description>
    <label>Regular Lowered Price before PromoDisc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>