force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__QuantityFact__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__QuantityFact__c</fullName>
    <description>Quantité réelle suivant l&apos;unité de mesure du volume définie</description>
    <label>Quantity Fact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>