force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__QuantityLanded__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__QuantityLanded__c</fullName>
    <description>Quantité atterit (dernière quantité connue pour la ligne)</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Landed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>