force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__QuantityPreOrder__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__QuantityPreOrder__c</fullName>
    <label>Quantity PreOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>