force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__QuantityTarget__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__QuantityTarget__c</fullName>
    <description>Quantité prévisionelle suivant l&apos;unité de mesure du volume définie</description>
    <label>Quantity Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>