force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__QuantityValidate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__QuantityValidate__c</fullName>
    <label>Quantity Validate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>