force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__QuantityValidatePartner__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__QuantityValidatePartner__c</fullName>
    <label>Quantity Validate Partner</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>