force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__RetailPricePromowoTax__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__RetailPricePromowoTax__c</fullName>
    <description>PV consommateur promo HT</description>
    <formula>IF(Negoptim__Product__c != null, Negoptim__RetailPricePromowTax__c / (1 +Negoptim__Product__r.Negoptim__VATRate__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PVC HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>