force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__RetailPriceRegular__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__RetailPriceRegular__c</fullName>
    <label>Regular Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>