force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SalesExecutionRateFact__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SalesExecutionRateFact__c</fullName>
    <label>Actual redemption rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>