force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInBDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInBDate__c</fullName>
    <description>Date début de livraison pour la ligne</description>
    <label>SellIn Start Date Exception</label>
    <type>Date</type>
</CustomField>