force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInBDateCP__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInBDateCP__c</fullName>
    <description>Date début livraison prévue au niveau de l&apos;event</description>
    <formula>Negoptim__CommercialPlan__r.Negoptim__SellInBDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event SellIn Start Date</label>
    <type>Date</type>
</CustomField>