force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInBDateMonth__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInBDateMonth__c</fullName>
    <description>Mois date début commande</description>
    <formula>MONTH( IF(ISNULL(Negoptim__SellInBDate__c), Negoptim__SellInBDateCP__c, Negoptim__SellInBDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>