force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInBDateWeek__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInBDateWeek__c</fullName>
    <description>Semaine date début commande</description>
    <formula>IF(CEILING( ( Negoptim__SellInBDate__c - DATE( YEAR(Negoptim__SellInBDate__c ), 1, 1) + 1) / 7) &gt; 52,
52, CEILING( (Negoptim__SellInBDate__c - DATE( YEAR(Negoptim__SellInBDate__c ), 1, 1) + 1) / 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>