force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInBDateYear__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInBDateYear__c</fullName>
    <description>Année date début commande</description>
    <formula>YEAR( IF(ISNULL(Negoptim__SellInBDate__c), Negoptim__SellInBDateCP__c, Negoptim__SellInBDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approv Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>