force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInDiscNetPriceRegular__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInDiscNetPriceRegular__c</fullName>
    <label>Discount Regular National</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>