force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInDiscountAvgRateFact__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInDiscountAvgRateFact__c</fullName>
    <label>Discount Average Promo Rate Fact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>