force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInDiscountMassValueNego__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInDiscountMassValueNego__c</fullName>
    <formula>Negoptim__VolumeTarget__c * (Negoptim__PWFBeforePromoDisc__c * Negoptim__SellInDiscountPerNego__c / 100
+ Negoptim__SellInDiscountUAmtNego__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Promo MassValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>