force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInDiscountPerNego__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInDiscountPerNego__c</fullName>
    <label>Discount Promo Additional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>