force-app/main/default/objects/Negoptim__CommercialPlanDetail__c/fields/Negoptim__SellInDiscountUAmtNego__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SellInDiscountUAmtNego__c</fullName>
    <label>Contribution Unit Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>